# titanic-survival

./: .gitignore  index.html  pyproject.toml  requirements.txt
backend/: main.py  mode_create.ipynb  titanic_model.pkl
frontend/: index.html  script.js  style.css
